Login Page Added

--- a/Sinema.WebUI/Views/Home/Index.cshtml
+++ b/Sinema.WebUI/Views/Home/Index.cshtml
@@ -3,5 +3,12 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="card mb-3" style="margin:20px">
+    <img src="~/img/home-cinema-theatre-header.jpg" class="card-img-top img-responsive" style="width:1140px;height:auto"  alt="Responsive image">
+    <div class="card-body">
+        <h5 class="card-title" >Sinema MVC App</h5>
+        <p class="card-text">Sql veri tabanından çekilen veri üzerinde ekleme, güncelleme ve silme işlemleri gerçekleştirilir. Entity framework kullanılmıştır.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+</div>
 
